--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -178,10 +178,11 @@
         (change)="onMonthYearSelect2()"
       />
       <canvas id="barGraphWH"></canvas>
-      <div class="SUW-label">
+      <div class="WH-label">
         <p class="SUW">Severely Underweight (SUW)</p>
         <p class="UW">Underweight (UW)</p>
         <p class="N">Normal (N)</p>
+        <p class="OW">Overweight (OW)</p>
         <p class="Ob">Obese (Ob)</p>
       </div>
     </div>
