--- a/src/app/home/monthly-height-records-table/monthly-height-records-table.component.html
+++ b/src/app/home/monthly-height-records-table/monthly-height-records-table.component.html
@@ -103,17 +103,17 @@
       required
     >
       <option value="">ALL</option>
-      <option value="January">January</option>
-      <option value="February">February</option>
-      <option value="March">March</option>
-      <option value="May">May</option>
-      <option value="June">June</option>
-      <option value="July">July</option>
-      <option value="August">August</option>
-      <option value="September">September</option>
-      <option value="October">October</option>
-      <option value="November">November</option>
-      <option value="December">December</option>
+      <option value="1">January</option>
+      <option value="2">February</option>
+      <option value="3">March</option>
+      <option value="4">May</option>
+      <option value="5">June</option>
+      <option value="6">July</option>
+      <option value="7">August</option>
+      <option value="8">September</option>
+      <option value="9">October</option>
+      <option value="10">November</option>
+      <option value="11">December</option>
     </select>
 
     <button (click)="clearFilters()">Clear_Filters</button>
@@ -127,7 +127,10 @@
   <div>
     <div class="result-container">
       <fieldset id="monthlyHeightRecords">
-        <legend>Monthly Height Records</legend>
+        <legend>
+          Monthly Records of Height and Height Status Stunted and Severely
+          Stunted Cases
+        </legend>
         <div class="result-table">
           <table>
             <thead>
@@ -136,7 +139,6 @@
                 <th>Name of Child</th>
                 <th>Birthday (dd/mm/yyyy)</th>
                 <th>Age in Months</th>
-                <th>Weight</th>
                 <th>Height or Length</th>
                 <th>Nutritional Status</th>
                 <th>Barangay</th>
@@ -150,15 +152,14 @@
                   let record of monthlyHeightRecords.slice(startIndex, endIndex)
                 "
               >
-                <td>{{ record.monthlyHeightRecordsId }}</td>
+                <td>{{ record.monthlyHeightId }}</td>
                 <td>
                   {{ record.nameOfChild }}
                 </td>
                 <td>{{ record.birthday }}</td>
                 <td>{{ record.ageInMonths }}</td>
-                <td>{{ record.weight }}</td>
-                <td>{{ record.heightOrLength }}</td>
-                <td>{{ record.nutritionalStatus }}</td>
+                <td>{{ record.height }}</td>
+                <td>{{ record.heightForAge }}</td>
                 <td>{{ record.barangay }}</td>
                 <td>{{ record.Date | date : "medium" : "Asia/Manila" }}</td>
                 <td>
