--- a/src/app/home/monthly-weight/monthly-weight.component.html
+++ b/src/app/home/monthly-weight/monthly-weight.component.html
@@ -78,6 +78,7 @@
           name="weightStatus"
           [(ngModel)]="monthlyWeightRecordData.weightStatus"
           required
+          readonly
         />
       </div>
       <div>
