--- a/src/app/page/about/about.component.css
+++ b/src/app/page/about/about.component.css
@@ -57,7 +57,7 @@
   background-image: url("/assets/SanJuan.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 .container {
@@ -75,7 +75,7 @@
 .top h1 {
   font-size: 24px;
   font-weight: bold;
-  background-color: #95cc99;
+  background-color: #b6c4b6;
   border-radius: 20px;
 }
 
@@ -84,7 +84,7 @@
 .ten-commandments {
   text-align: center;
   margin-bottom: 30px;
-  background-color: #749c77;
+  background-color: #eef0e5;
   border-radius: 20px;
 }
 
@@ -94,7 +94,7 @@
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px;
-  background-color: #749c77;
+  background-color: #b6c4b6;
   border-radius: 20px;
 }
 
@@ -103,7 +103,7 @@
 .ten-commandments p {
   font-size: 16px;
   line-height: 1.5;
-  background-color: #84a987;
+  background-color: #eef0e5;
   border-radius: 20px;
 }
 
@@ -113,13 +113,13 @@
 
 .municipality {
   padding: 20px;
-  background-color: #749c77;
+  background-color: #eef0e5;
   text-align: center;
   border-radius: 20px;
 }
 
 .municipality h2 {
-  background-color: #84a987;
+  background-color: #b6c4b6;
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
@@ -128,7 +128,7 @@
 }
 
 .municipality p {
-  background-color: #749c77;
+  background-color: #eef0e5;
   margin: 0;
   text-align: center;
   font-size: 20px;
