--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -52,24 +52,34 @@
   <div class="ten-commandments">
     <h2>Ten Commandments of Good Nutrition For Filipinos</h2>
     <p>
-      1. Eat a variety of foods everyday to get the nutrients needed by the
-      body.
-      <br />2. Breastfeed infants exclusively from birth up to six months and
-      then give appropriate complementary foods while continuing breastfeeding
-      for two years and beyond for optimum growth and development. <br />3. Eat
-      more vegetables and fruits to get the essential vitamins, minerals, and
-      fiber for regulation of body processes. <br />4. Consume fish, lean meat,
-      poultry, egg, dried beans or nuts daily for growth and repair of body
-      tissues. <br />5. Consume milk, milk products, and other calcium-rich food
-      such as small fish and shellfish, everyday for healthy bones and teeth.
-      <br />6. Consume safe foods and water to prevent diarrhea and other
-      food-and water-borne diseases. <br />7. Use iodized salt to prevent Iodine
-      Deficiency Disorders. <br />8. Limit intake of salty, fried, fatty, and
-      sugar-rich foods to prevent cardiovascular diseases. <br />9. Attain
-      normal body weight through proper diet and moderate physical activity to
-      maintain good health and help prevent obesity. <br />10. Be physically
-      active, make healthy food choices, manage stress, avoid alcoholic
-      beverage, and do not smoke to help prevent lifestyle-related
+      - Eat a variety of foods everyday to get the nutrients needed by the body.
+      <br />
+      - Breastfeed infants exclusively from birth up to six months and then give
+      appropriate complementary foods while continuing breastfeeding for two
+      years and beyond for optimum growth and development.
+      <br />
+      - Eat more vegetables and fruits to get the essential vitamins, minerals,
+      and fiber for regulation of body processes.
+      <br />
+      - Consume fish, lean meat, poultry, egg, dried beans or nuts daily for
+      growth and repair of body tissues.
+      <br />
+      - Consume milk, milk products, and other calcium-rich food such as small
+      fish and shellfish, everyday for healthy bones and teeth.
+      <br />
+      - Consume safe foods and water to prevent diarrhea and other food-and
+      water-borne diseases.
+      <br />
+      - Use iodized salt to prevent Iodine Deficiency Disorders.
+      <br />
+      - Limit intake of salty, fried, fatty, and sugar-rich foods to prevent
+      cardiovascular diseases.
+      <br />
+      - Attain normal body weight through proper diet and moderate physical
+      activity to maintain good health and help prevent obesity.
+      <br />
+      - Be physically active, make healthy food choices, manage stress, avoid
+      alcoholic beverage, and do not smoke to help prevent lifestyle-related
       non-communicable disease.
     </p>
   </div>
