--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,10 @@
 <div class="navbar">
   <div class="navbar-content">
     <div class="navbar-logo"></div>
-    <div class="logo-text">{{ username }}</div>
+    <div class="logo-text">
+      <h1>SAN JUAN BATANGAS</h1>
+      <h2>{{ username }}</h2>
+    </div>
   </div>
   <ul class="navbar-list">
     <li *ngIf="userRole === 'bhw'">
