--- a/src/app/home/bmi-result/bmi-result.component.css
+++ b/src/app/home/bmi-result/bmi-result.component.css
@@ -1,5 +1,11 @@
-* {
-  box-sizing: border-box;
+input[type="text"],
+input[type="date"],
+input[type="number"],
+select {
+  width: 98.5%;
+  padding: 5px;
+  font-size: 15px;
+  border-radius: 4px;
 }
 
 fieldset {
