--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -19,10 +19,18 @@ body {
   margin: 0;
 }
 
+h1 {
+  font-size: 25px;
+  font-style: italic;
+}
+
+h2 {
+  font-size: 15px;
+}
 .navbar {
   background-color: #618264;
   color: #fff;
-  padding: 10px;
+  padding: 15px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -37,8 +45,8 @@ body {
   background-image: url("../../assets/SanJuan1.png");
   background-size: contain;
   background-repeat: no-repeat;
-  width: 80px;
-  height: 80px;
+  width: 90px;
+  height: 90px;
   margin-right: 10px;
 }
 
