--- a/src/app/home/nutritional-table/nutritional-table.component.css
+++ b/src/app/home/nutritional-table/nutritional-table.component.css
@@ -12,17 +12,15 @@
   transform: translate(-50%, -50%);
 }
 
-#viewCon {
-  border-radius: 10px;
+#viewCon:focus-within::after {
   padding: 5px;
-  position: absolute;
-  justify-content: center;
-  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
   font-size: 20px;
-
-  left: 50%;
-  top: 210%;
-  transform: translate(-50%, -50%);
 }
 
 input[type="text"],
